adicionei um segundo paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae animi nostrum quae expedita sequi sapiente vitae accusamus nobis possimus! Repellat reprehenderit, quis vel adipisci similique ullam quod recusandae dignissimos voluptatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus recusandae dolore sed quasi! Quod nobis quas natus possimus sed ab alias, sit blanditiis ex fugit quaerat itaque cupiditate, odit sequi!</p>
 </body>
 </html>
